# Omni

./: GAP_ANALYSIS.md  index.html  package-lock.json  package.json  settings.html  tsconfig.json  vite.config.ts
docs/: theming-approach.md
docs/superpowers/plans/: 2026-03-15-omni-table-panel.md
docs/superpowers/specs/: 2026-03-14-omni-v2-features.md  2026-03-15-omni-column-reorder-design.md  2026-03-15-omni-table-panel-design.md  2026-03-15-omni-v3-features.md
src/: App.tsx  settings.css  settings.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: autostart.rs  clipboard.rs  config.rs  icons.rs  lib.rs  main.rs  preview.rs  recolor.rs  search.rs  usage.rs
src-tauri/src/providers/: apps.rs  color.rs  currency.rs  everything.rs  math.rs  mod.rs  process.rs  system.rs  units.rs  url.rs  web_search.rs
src-tauri/tests/: apps_test.rs  color_test.rs  config_test.rs  currency_test.rs  everything_test.rs  math_test.rs  process_test.rs  search_test.rs  system_test.rs  units_test.rs  url_test.rs  usage_test.rs  web_search_test.rs
src/components/: ContextMenu.tsx  PreviewPanel.tsx  ResultGroup.tsx  ResultItem.tsx  SearchInput.tsx  SettingsPanel.tsx  TablePanel.tsx
