[package]
name = "omni"
version = "0.1.0"
description = "Omni Launcher"
authors = []
edition = "2021"

[lib]
name = "omni_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "omni"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-build = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
meval = "0.2"
nucleo-matcher = "0.3"
regex = "1"
dirs = "6"
open = "5"
window-vibrancy = "0.5"
tauri-plugin-global-shortcut = "2"
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
percent-encoding = "2"
windows = { version = "0.61", features = [
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_Storage_FileSystem",
] }
image = { version = "0.25", default-features = false, features = ["png"] }
base64 = "0.22"
rusqlite = { version = "0.34", features = ["bundled"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
